--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+    <uses-permission android:name="android.permission.CALL_PHONE" />
 
     <application
         android:allowBackup="true"
@@ -61,7 +62,8 @@
             android:enabled="true"
             android:exported="true" />
 
-        <activity android:name=".activity.DragViewActivity"></activity>
+        <activity android:name=".activity.DragViewActivity" />
+        <activity android:name=".activity.BlackNumberActivity"></activity>
     </application>
 
 </manifest>
