--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,15 @@
     <uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
     <uses-permission android:name="android.permission.CALL_PHONE" />
+    <uses-permission android:name="android.permission.WRITE_CONTACTS" />
+    <uses-permission android:name="android.permission.WRITE_CALL_LOG" />
+   <!-- 备份短信的权限-->
+    <uses-permission android:name="android.permission.READ_SMS" />
+    <uses-permission android:name="android.permission.WRITE_SMS" />
+    <uses-permission android:name="com.android.launcher.permission.INSTALL_SHORTCUT" />
+
+
+
 
     <application
         android:allowBackup="true"
@@ -63,7 +72,12 @@
             android:exported="true" />
 
         <activity android:name=".activity.DragViewActivity" />
-        <activity android:name=".activity.BlackNumberActivity"></activity>
+        <activity android:name=".activity.BlackNumberActivity" />
+
+        <service
+            android:name=".service.BlacknumberService"
+            android:enabled="true"
+            android:exported="true"></service>
     </application>
 
 </manifest>
