--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
     <uses-permission android:name="android.permission.READ_SMS" />
     <uses-permission android:name="android.permission.WRITE_SMS" />
     <uses-permission android:name="com.android.launcher.permission.INSTALL_SHORTCUT" />
+    <uses-permission android:name="android.permission.KILL_BACKGROUND_PROCESSES" />
 
     <application
         android:allowBackup="true"
@@ -79,7 +80,22 @@
             android:exported="true" />
 
         <activity android:name=".activity.AppManagerActivity" />
-        <activity android:name=".activity.CommonNumberActivity"></activity>
+        <activity android:name=".activity.CommonNumberActivity" />
+        <activity android:name=".activity.ProcessManagerActivity" />
+        <!--
+ ATTENTION: This was auto-generated to add Google Play services to your project for
+     App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information.
+        -->
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+
+        <activity android:name=".activity.ProcessSettingActivity" />
+
+        <service
+            android:name=".service.AutoKillService"
+            android:enabled="true"
+            android:exported="true"></service>
     </application>
 
 </manifest>
