--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,8 @@
     <uses-permission android:name="android.permission.KILL_BACKGROUND_PROCESSES" />
     <uses-permission android:name="android.permission.GET_TASKS" />
     <uses-permission android:name="com.android.launcher.permission.INSTALL_SHORTCUT" />
-
+    <uses-permission android:name="android.permission.GET_PACKAGE_SIZE" />
+    <uses-permission android:name="android.permission.CLEAR_APP_CACHE" />
 
     <application
         android:allowBackup="true"
@@ -56,11 +57,16 @@
         <activity android:name=".activity.CommonNumberActivity" />
         <activity android:name=".activity.ProcessManagerActivity" />
         <activity android:name=".activity.AppLockActivity" />
-        <activity android:name=".activity.EnterPwdActivity"
-            android:launchMode="singleInstance"
+        <activity
+            android:name=".activity.EnterPwdActivity"
             android:excludeFromRecents="true"
+            android:launchMode="singleInstance" />
+        <activity android:name=".activity.TrafficStatsActivity" />
+        <!--  android:screenOrientation="portrait"使屏幕强制坚屏--><!--android:configChanges="orientation|screenSize|keyboardHidden"横屏竖屏都可以-->
+        <activity android:name=".activity.AntiVirusActivity"
+            android:configChanges="orientation|screenSize|keyboardHidden"
             />
-
+        <activity android:name=".activity.CleanCacheActivity"></activity>
 
         <receiver android:name=".receiver.BootCompleteReceiver">
             <intent-filter>
@@ -90,7 +96,6 @@
             </intent-filter>
         </receiver>
 
-
         <service
             android:name=".service.LocationService"
             android:enabled="true"
@@ -99,14 +104,10 @@
             android:name=".service.AddressService"
             android:enabled="true"
             android:exported="true" />
-
-
-
         <service
             android:name=".service.BlacknumberService"
             android:enabled="true"
             android:exported="true" />
-
 
         <!--
  ATTENTION: This was auto-generated to add Google Play services to your project for
@@ -122,25 +123,14 @@
             android:name=".service.AutoKillService"
             android:enabled="true"
             android:exported="true" />
-
-
-
         <service
             android:name=".service.UpdateWidgetService"
             android:enabled="true"
             android:exported="true" />
-
-
-
-
-
         <service
             android:name=".service.WatchDogService"
             android:enabled="true"
             android:exported="true" />
-
-
-
 
 
     </application>
